# cofounder-circle-app

./: .gitignore  DEPLOYMENT_GUIDE.md  FIREBASE_IP_AUTHORIZATION_FIX.md  FIREBASE_MIGRATION_SUMMARY.md  FIREBASE_SETUP.md  MICRO_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_SECURITY_GUIDE.md  README.md  SUPABASE_COMPLETE_FIX.md  SUPABASE_FIREBASE_RLS_SETUP.md  SUPABASE_FIX_COMMANDS.sql  SUPABASE_JWT_SETUP.md  SUPABASE_RLS_ENABLE.md  SUPABASE_RLS_FIREBASE_AUTH.md  SUPABASE_RLS_FIX.md  SUPABASE_SESSION_TRACKING.sql  SUPABASE_STUDENTS_TABLE.sql  SUPABASE_STUDENTS_TABLE_SIMPLE.sql  SUPABASE_TABLE_FIX.md  SUPABASE_TROUBLESHOOTING.md  T3MEDIUM_DEPLOYMENT.md  check-ip.js  deploy.sh  ecosystem.config.js  generate-ssl-cert.sh  network-test.html  nginx-config.conf  nginx-https.conf  package-lock.json  package.json  restart-services.sh  setup-https.sh  setup-server.sh  setup.sh  start-backend.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  ai_search.py  auth.py  founders.py  locations.py  mentors.py  sessions.py  students.py  user_profiles.py  users.py  vendors.py  (+1 more)
backend/app/core/: auth.py  config.py  performance.py
backend/app/schemas/: founder.py  mentor.py  student.py  user.py  user_profile.py  vendor.py  working_professional.py
backend/app/services/: firebase_service.py  founder_service.py  location_service.py  mentor_service.py  session_service.py  student_service.py  supabase_service.py  user_profile_service.py  vendor_service.py  working_professional_service.py
(+75 files in other folders)
